2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Worked on templates.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Worked on template
	  callbacks.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Worked on multi item
	  callback.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs: Worked on text
	  link mode.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Styles/C64Style.xml:
	* Styles/BrownStyle.xml:
	* Mono.TextEditor.csproj:
	* Styles/OblivionStyle.xml:
	* Mono.TextEditor/Caret.cs:
	* Mono.TextEditor/Margin.cs:
	* Styles/TangoLightStyle.xml:
	* Styles/VisualStudioStyle.xml:
	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.Highlighting/Style.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs: Worked on text
	  link editor mode.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/objects.xml:
	* Mono.TextEditor.csproj:
	* Mono.TextEditor.PopupWindow:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/TooltipWindow.cs: Text links now
	  show tooltips. Set the tooltip popup hotkey to Ctrl+F1.

2009-03-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Implemented function
	  callbacks.

2009-03-20  Mike Krüger  <mkrueger@novell.com>

	* Styles/C64Style.xml:
	* Styles/BrownStyle.xml:
	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml:
	* Styles/VisualStudioStyle.xml:
	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/LineSegment.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.Highlighting/Style.cs: Worked on text link
	  edit mode.
